fix alignment

--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -38,7 +38,8 @@
   margin: 5px auto;
 }
 
-.user-description {
+.user-description { 
+  width: 80%;
   text-align: center;
   margin: 0 auto;	
 }
